docs: update index.html

--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lusine Akopyan</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="container">
+        <div id="nav"></div>
+        <div id="aside"></div>
+        <div id="content">
+            <main class="content">
+                <img class="photo" src="img/photo-cv.jpg" alt="My photo" height=300px>
     <header>
-        <figure>
-            <img src="img/photo-cv.png" alt="My photo" height=300px>
-        </figure>
+        <h1> Lusine Akopyan</h1>
     </header>
-    <div>
-    <h1> Lusine Akopyan</h1>
     <p class="position">Junior Front-End Developer</p>
     </div>
     <h2>Contacts</h2>
@@ -44,5 +47,19 @@
     </ul>
     <h2>English</h2>
     <p>B1 (Intermediate)</p>
+</section>
+</main>
+<footer class="footer">
+  <a class="ref" href="https://rs.school/js/" target="_blank">
+    <img class="rsschool-logo" src="./img/rs_school_js.svg" alt="RSSchool logo">
+  </a>
+  <a class="ref" href="https://github.com/Lusinesayshelloworld" target="_blank">
+    <span class="github-text">Follow me on GitHub</span>
+    <img class="github-logo" src="./img/GitHub-logo.png" alt="GitHub logo">
+  </a>
+</footer>
+</div>
+</body>
+</html>
 </body>
 </html>
