--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Lusine Akopyan</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<div class="burger-menu">
+    <input id="menu-toggle" type="checkbox" />
+    <label class="menu-btn" for="menu-toggle">
+      <span></span>
+    </label>
+ 
+    <ul class="menubox">
+            <li><a class="menu-item" href="#contacts">Contacts</a></li>
+            <li><a class="menu-item" href="#about-me">About me</a></li>
+            <li><a class="menu-item" href="#skills">Skills</a></li>
+            <li><a class="menu-item" href="#code-example">Code Example</a></li>
+            <li><a class="menu-item" href="#education">Educatuon</a></li>
+            <li><a class="menu-item" href="#english">English</a></li>
+    </ul>
+  </div>
 <body>
     <div id="container">
         <div id="nav"></div>
@@ -19,40 +34,55 @@
     </header>
     <p class="position">Junior Front-End Developer</p>
     </div>
-    <h2>Contacts</h2>
+    <article class="contacts">
+    <h2><a name="contacts">Contacts</a></h2>
     <ul>
         <li>Location: Nizhny Novgorod</li>
         <li>Telegram: @lu_si_ne</li>
     </ul>
-    <h2>About me</h2>
+    </article>
+    <article class="about-me">
+    <h2><a name="about-me">About me</a></h2>
     <p>I learn programming to become a Front-End Engineer. It's so hard to study but I do my best.</p>
-    <h2>Skills</h2>
+    </article>
+    <article class="skills">
+    <h2><a name="skills">Skills</a></h2>
     <ul>
         <li>HTML</li>
         <li>CSS</li>
         <li>Git</li>
         <li>VSCode</li>
     </ul>
-    <h2>Code Example</h2>
-    <p>
+    </article>
+    <article class="code-example">
+    <h2><a name="code-example">Code Example</a></h2>
+        <pre>
+
         function multiply(a, b){
             return a * b
           }
-    </p>
-    <h2>Education</h2>
+          
+        </pre>
+    </article>
+    <article class="education">
+    <h2><a name="education">Education</a></h2>
     <ul>
         <li>RSSchool JavaScript/Front-end 2021Q3</li>
         <li>HTML, CSS, JavaScript courses on code-basics.com</li>
         <li>HTML, CSS courses on webref.com</li>
     </ul>
-    <h2>English</h2>
+    </article>
+    <article class="english">
+    <h2><a name="english">English</a></h2>
     <p>B1 (Intermediate)</p>
+    </article>
 </section>
 </main>
 <footer class="footer">
   <a class="ref" href="https://rs.school/js/" target="_blank">
     <img class="rsschool-logo" src="./img/rs_school_js.svg" alt="RSSchool logo">
   </a>
+  <p class="footer_year">~ 2021 ~</p>
   <a class="ref" href="https://github.com/Lusinesayshelloworld" target="_blank">
     <span class="github-text">Follow me on GitHub</span>
     <img class="github-logo" src="./img/GitHub-logo.png" alt="GitHub logo">
