fix: logo in footer

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
   <p class="footer_year">© 2022 by Lusine Akopyan</p>
   <div class="footer_logo">
     <a class="github" href="https://github.com/Lusinesayshelloworld" target="_blank">
-      <img src="/img/github.png" alt="github_logo">
+      <img src="./img/github.png" alt="github_logo">
     </a>
     <a class="telegram" href="https://t.me/lu_si_ne" target="_blank">
-      <img src="/img/telegram.png" alt="telegram_logo">
+      <img src="./img/telegram.png" alt="telegram_logo">
     </a>
     <a class="discord" href="https://t.me/lu_si_ne" target="_blank">
-      <img class="discord" src="/img/discord.png" alt="discord_logo">
+      <img class="discord" src="./img/discord.png" alt="discord_logo">
     </a>
   </div>
 </footer>
