--- a/index.html
+++ b/index.html
@@ -81,14 +81,18 @@
   <a class="ref" href="https://rs.school/js/" target="_blank">
     <img class="rsschool-logo" src="./img/rs_school_js.svg" alt="RSSchool logo">
   </a>
-  <p class="footer_year">~ 2021 ~</p>
-  <a class="ref" href="https://github.com/Lusinesayshelloworld" target="_blank">
-    <span class="github-text">Follow me on GitHub</span>
-    <img class="github-logo" src="./img/GitHub-logo.png" alt="GitHub logo">
-  </a>
+  <p class="footer_year">©2022 by Lusine Akopyan</p>
+  <div class="footer_logo">
+    <a class="github" href="https://github.com/Lusinesayshelloworld" target="_blank">
+      <img src="./img/github.png" alt="github_logo">
+    </a>
+    <a class="telegram" href="https://t.me/lu_si_ne" target="_blank">
+      <img src="./img/telegram.png" alt="telegram_logo">
+    </a>
+    <a class="discord" href="https://t.me/lu_si_ne" target="_blank">
+      <img class="discord" src="./img/discord.png" alt="discord_logo">
+    </a>
+  </div>
 </footer>
-</div>
-</body>
-</html>
 </body>
 </html>
