fix: fixed by validator

--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
     <h1>Lusine Akopyan</h1>
     <p class="position">Junior Front-End Developer</p>
   </header>
-  <section class="main">
-    <div class="main">
-      <p class="main">Hello, world!<br>To be honest, I'm not a front-end developer yet. I am committed to learning and self-development so that I can consistently achieve better results.</p>
+  <main>
+  <section class="bio">
+    <div class="bio">
+      <p class="bio">Hello, world!<br>To be honest, I'm not a front-end developer yet. I am committed to learning and self-development so that I can consistently achieve better results.</p>
     </div>
     </section>
   <section class="skills">
-    <h2><a name="skills">Skills</a></h2>
+    <h2><a id="skills">Skills</a></h2>
     <ul>
         <li>HTML</li>
         <li>CSS</li>
@@ -42,7 +43,7 @@
     </ul>
     </section>
     <section class="code-example">
-    <h2><a name="code-example">Code Example</a></h2>
+    <h2><a id="code-example">Code Example</a></h2>
         <pre>
 
           function greet() {
@@ -52,7 +53,7 @@
         </pre>
     </section>
     <section class="projects">
-      <h2><a name="projects">Projects</a></h2>
+      <h2><a id="projects">Projects</a></h2>
       <div class="projects">
         <a href="https://lusinesayshelloworld.github.io/Burger/" target="_blank"><img src="img/burger.png" alt="burger">
           <p>Burgers</p>
@@ -63,7 +64,7 @@
       </div>
     </section>
     <section class="education">
-    <h2><a name="education">Education</a></h2>
+    <h2><a id="education">Education</a></h2>
     <ul>
         <li>RSSchool JavaScript/Front-end 2021Q3</li>
         <li>HTML, CSS, JavaScript courses on code-basics.com</li>
@@ -71,19 +72,18 @@
     </ul>
     </section>
     <section class="languages">
-    <h2><a name="languages">Languages</a></h2>
+    <h2><a id="languages">Languages</a></h2>
     <h3>English</h3>
     <p>B1 (Intermediate)</p>
     <h3>Russian</h3>
     <p>Native</p>
     </section>
-</section>
 <section class="contacts">
-  <h2><a name="contacts">Contacts</a></h2>
+  <h2><a id="contacts">Contacts</a></h2>
   <ul>
       <li>Location: Nizhny Novgorod</li>
       <li>Telegram: @lu_si_ne</li>
-      <li>Discord: Lusine#6381</a></li>
+      <li>Discord: Lusine#6381</li>
   </ul>
   </section>
 </main>
