docs: change link in projects

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <a href="https://lusinesayshelloworld.github.io/Burger/" target="_blank"><img src="img/burger.png" alt="burger">
           <p>Burgers</p>
         </a>
-        <a href="https://rolling-scopes-school.github.io/lusinesayshelloworld-JSFE2021Q3/museum/" target="_blank"><img src="img/museum.jpg" alt="museum">
-          <p>Museum</p>
+        <a href="https://rolling-scopes-school.github.io/lusinesayshelloworld-JSFEPRESCHOOL/portfolio/" target="_blank"><img src="img/portfolio.png" alt="portfolio">
+          <p>Portfolio</p>
         </a>
       </div>
     </section>
