update: cv-photo, footer

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class="container1">
   <nav class="menu">
     <ul>
       <li><a href="#skills">Skills</a></li>
@@ -22,7 +23,8 @@
     </ul>
   </nav>
   <header>
-    <h1>Lusine Akopyan</h1>
+    <img src="./img/cv-photo.png" alt="cv-photo" class="cv-photo">
+    <h1>Lusine</h1>
     <p class="position">Junior Front-End Developer</p>
   </header>
   <main>
