update: footer add new link to codewars

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
     <a class="telegram" href="https://t.me/lu_si_ne" target="_blank">
       <img src="./img/telegram.png" alt="telegram_logo">
     </a>
+    <a class="codewars" href="https://www.codewars.com/users/Lusinesayshelloworld" target="_blank">
+      <img src="./img/codewars.svg" alt="codewars_logo">
+    </a>
 </footer>
 </body>
 </html>
