add: skills icons

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <section class="contacts">
   <h2><a id="contacts">Contacts</a></h2>
   <ul>
-      <li>Location: Nizhny Novgorod</li>
+      <li>Location: Russia, Nizhny Novgorod</li>
       <li>Telegram: @lu_si_ne</li>
   </ul>
   </section>
@@ -91,7 +91,7 @@
   <a class="ref" href="https://rs.school/js/" target="_blank">
     <img class="rsschool-logo" src="./img/rs_school_js.svg" alt="RSSchool logo">
   </a>
-  <p class="footer_year">©2022 by Lusine Akopyan</p>
+  <p class="footer_year">©2022 by Lusine</p>
   <div class="footer_logo">
     <a class="github" href="https://github.com/Lusinesayshelloworld" target="_blank">
       <img src="./img/github.png" alt="github_logo">
