update: skils section

--- a/index.html
+++ b/index.html
@@ -33,14 +33,32 @@
     </div>
   <section class="skills">
     <h2><a id="skills">Skills</a></h2>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Git / GitHub</li>
-        <li>VSCode</li>
-        <li>Figma</li>
-    </ul>
+    <div class="skills-container">
+        <div>
+          <img class="skills-icons" src="./img/skills icons/html.png" alt="html-icon">
+          <p>HTML</p>
+        </div>
+        <div>
+          <img class="skills-icons" src="./img/skills icons/css.png" alt="html-icon">
+          <p>CSS</p>
+        </div>
+        <div>
+          <img class="skills-icons" src="./img/skills icons/js.png" alt="html-icon">
+          <p>JavaScript</p>
+        </div>
+        <div>
+          <img class="skills-icons" src="./img/skills icons/git.png" alt="html-icon">
+          <p>Git</p>
+        </div>
+        <div>
+          <img class="skills-icons" src="./img/skills icons/vscode.png" alt="html-icon">
+          <p>VSCode</p>
+        </div>
+        <div>
+          <img class="skills-icons" src="./img/skills icons/figma.png" alt="html-icon">
+          <p>Figma</p>
+        </div>
+    </div>
     </section>
     <section class="code-example">
     <h2><a id="code-example">Code Example</a></h2>
