update: text-size h2, skills-items

--- a/index.html
+++ b/index.html
@@ -33,28 +33,28 @@
     </div>
   <section class="skills">
     <h2><a id="skills">Skills</a></h2>
-    <div class="skills-container">
-        <div>
+    <div class="skills-items">
+        <div class="skills-item">
           <img class="skills-icons" src="./img/skills icons/html.png" alt="html-icon">
           <p>HTML</p>
         </div>
-        <div>
+        <div class="skills-item">
           <img class="skills-icons" src="./img/skills icons/css.png" alt="html-icon">
           <p>CSS</p>
         </div>
-        <div>
+        <div class="skills-item">
           <img class="skills-icons" src="./img/skills icons/js.png" alt="html-icon">
           <p>JavaScript</p>
         </div>
-        <div>
-          <img class="skills-icons" src="./img/skills icons/git.png" alt="html-icon">
-          <p>Git</p>
-        </div>
-        <div>
+        <div class="skills-item">
           <img class="skills-icons" src="./img/skills icons/vscode.png" alt="html-icon">
           <p>VSCode</p>
         </div>
-        <div>
+        <div class="skills-item">
+          <img class="skills-icons" src="./img/skills icons/git.png" alt="html-icon">
+          <p>Git</p>
+        </div>
+        <div class="skills-item">
           <img class="skills-icons" src="./img/skills icons/figma.png" alt="html-icon">
           <p>Figma</p>
         </div>
