--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
     <h2><a id="code-example">Code Example</a></h2>
         <pre>
 
-          function dataReverse(data) {
-            let size = 8;
-            let newArr = [];
-            for (let i = 0; i < (data.length/size); i++){
-               newArr[i] = data.slice((i*size), (i*size) + size);
-          }
-           return newArr.reverse().concat.apply([], newArr);
+          <span style="color:rgb(0, 87, 128)">function</span> <span style="color:rgb(243, 248, 169)">dataReverse</span><span style="color: rgb(255, 255, 0);">(</span><span style="color: rgb(75, 209, 250);">data</span><span style="color: rgb(255, 255, 0);">)</span> <span style="color: rgb(255, 255, 0);">{</span>
+            <span style="color:rgb(0, 87, 128)">let</span> <span style="color: rgb(75, 209, 250);">size</span> = <span style="color: rgb(157, 245, 146)">8</span>;
+            <span style="color:rgb(0, 87, 128)">let</span> <span style="color: rgb(75, 209, 250);">newArr</span> = <span style="color: rgb(250, 44, 222)">[]</span>;
+            <span style="color: rgb(250, 44, 222)">for</span> <span style="color:rgb(250, 44, 222)">(</span><span style="color:rgb(0, 87, 128)">let</span> <span style="color: rgb(75, 209, 250);">i</span> = <span style="color: rgb(157, 245, 146)">0</span>; <span style="color: rgb(75, 209, 250);">i</span> < <span style="color: rgb(75, 209, 250);">(</span><span style="color: rgb(75, 209, 250);">data</span>.<span style="color: rgb(75, 209, 250);">length</span>/<span style="color: rgb(75, 209, 250);">size</span><span style="color: rgb(75, 209, 250);">)</span>; <span style="color: rgb(75, 209, 250);">i</span>++<span style="color: rgb(250, 44, 222)">)</span><span style="color: rgb(250, 44, 222)">{</span>
+              <span style="color: rgb(75, 209, 250);">newArr[i]</span> = <span style="color: rgb(75, 209, 250);">data</span>.<span style="color:rgb(243, 248, 169)">slice</span><span style="color: rgb(75, 209, 250);">(</span><span style="color: rgb(255, 255, 0);">(</span><span style="color: rgb(75, 209, 250);">i</span>*<span style="color: rgb(75, 209, 250);">size</span><span style="color: rgb(255, 255, 0);">)</span>, <span style="color: rgb(255, 255, 0);">(</span><span style="color: rgb(75, 209, 250);">i</span>*<span style="color: rgb(75, 209, 250);">size</span><span style="color: rgb(255, 255, 0);">)</span> + <span style="color: rgb(75, 209, 250);">size</span><span style="color: rgb(75, 209, 250);">)</span>;
+               <span style="color: rgb(250, 44, 222)">}</span>
+           <span style="color: rgb(250, 44, 222)">return</span> <span style="color: rgb(75, 209, 250);">newArr</span>.<span style="color:rgb(243, 248, 169)">reverse</span><span style="color: rgb(250, 44, 222)">()</span>.<span style="color:rgb(243, 248, 169)">concat</span>.<span style="color:rgb(243, 248, 169)">apply</span><span style="color: rgb(250, 44, 222)">(</span><span style="color: rgb(75, 209, 250);">[]</span>, <span style="color: rgb(75, 209, 250);">newArr</span><span style="color: rgb(250, 44, 222)">)</span>;
           }
           
         </pre>
