update: contacts section + add map

--- a/index.html
+++ b/index.html
@@ -103,8 +103,11 @@
     </section>
 <section class="contacts">
   <h2><a id="contacts">Contacts</a></h2>
+  <div class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d141578.98479467482!2d43.89629509219819!3d56.3268684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4151d5f9ee033251%3A0x28d3c0cf849657aa!2sNizhny%20Novgorod%2C%20Nizhny%20Novgorod%20Oblast!5e0!3m2!1sen!2sru!4v1651339097834!5m2!1sen!2sru" width="700" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
   <ul>
-      <li>Location: Russia, Nizhny Novgorod</li>
+      <li>Discord: Lusine#6381</li>
       <li>Telegram: @lu_si_ne</li>
   </ul>
   </section>
