fix: errors of validator

--- a/index.html
+++ b/index.html
@@ -35,27 +35,27 @@
     <h2><a id="skills">Skills</a></h2>
     <div class="skills-items">
         <div class="skills-item">
-          <img class="skills-icons" src="./img/skills icons/html.png" alt="html-icon">
+          <img class="skills-icons" src="./img/skills_icons/html.png" alt="html-icon">
           <p>HTML</p>
         </div>
         <div class="skills-item">
-          <img class="skills-icons" src="./img/skills icons/css.png" alt="html-icon">
+          <img class="skills-icons" src="./img/skills_icons/css.png" alt="html-icon">
           <p>CSS</p>
         </div>
         <div class="skills-item">
-          <img class="skills-icons" src="./img/skills icons/js.png" alt="html-icon">
+          <img class="skills-icons" src="./img/skills_icons/js.png" alt="html-icon">
           <p>JavaScript</p>
         </div>
         <div class="skills-item">
-          <img class="skills-icons" src="./img/skills icons/vscode.png" alt="html-icon">
+          <img class="skills-icons" src="./img/skills_icons/vscode.png" alt="html-icon">
           <p>VSCode</p>
         </div>
         <div class="skills-item">
-          <img class="skills-icons" src="./img/skills icons/git.png" alt="html-icon">
+          <img class="skills-icons" src="./img/skills_icons/git.png" alt="html-icon">
           <p>Git</p>
         </div>
         <div class="skills-item">
-          <img class="skills-icons" src="./img/skills icons/figma.png" alt="html-icon">
+          <img class="skills-icons" src="./img/skills_icons/figma.png" alt="html-icon">
           <p>Figma</p>
         </div>
     </div>
@@ -67,7 +67,7 @@
           <span style="color:rgb(0, 87, 128)">function</span> <span style="color:rgb(243, 248, 169)">dataReverse</span><span style="color: rgb(255, 255, 0);">(</span><span style="color: rgb(75, 209, 250);">data</span><span style="color: rgb(255, 255, 0);">)</span> <span style="color: rgb(255, 255, 0);">{</span>
             <span style="color:rgb(0, 87, 128)">let</span> <span style="color: rgb(75, 209, 250);">size</span> = <span style="color: rgb(157, 245, 146)">8</span>;
             <span style="color:rgb(0, 87, 128)">let</span> <span style="color: rgb(75, 209, 250);">newArr</span> = <span style="color: rgb(250, 44, 222)">[]</span>;
-            <span style="color: rgb(250, 44, 222)">for</span> <span style="color:rgb(250, 44, 222)">(</span><span style="color:rgb(0, 87, 128)">let</span> <span style="color: rgb(75, 209, 250);">i</span> = <span style="color: rgb(157, 245, 146)">0</span>; <span style="color: rgb(75, 209, 250);">i</span> < <span style="color: rgb(75, 209, 250);">(</span><span style="color: rgb(75, 209, 250);">data</span>.<span style="color: rgb(75, 209, 250);">length</span>/<span style="color: rgb(75, 209, 250);">size</span><span style="color: rgb(75, 209, 250);">)</span>; <span style="color: rgb(75, 209, 250);">i</span>++<span style="color: rgb(250, 44, 222)">)</span><span style="color: rgb(250, 44, 222)">{</span>
+            <span style="color: rgb(250, 44, 222)">for</span> <span style="color:rgb(250, 44, 222)">(</span><span style="color:rgb(0, 87, 128)">let</span> <span style="color: rgb(75, 209, 250);">i</span> = <span style="color: rgb(157, 245, 146)">0</span>; <span style="color: rgb(75, 209, 250);">i</span> <span style="color: rgb(75, 209, 250);">(</span><span style="color: rgb(75, 209, 250);">data</span>.<span style="color: rgb(75, 209, 250);">length</span>/<span style="color: rgb(75, 209, 250);">size</span><span style="color: rgb(75, 209, 250);">)</span>; <span style="color: rgb(75, 209, 250);">i</span>++<span style="color: rgb(250, 44, 222)">)</span><span style="color: rgb(250, 44, 222)">{</span>
               <span style="color: rgb(75, 209, 250);">newArr[i]</span> = <span style="color: rgb(75, 209, 250);">data</span>.<span style="color:rgb(243, 248, 169)">slice</span><span style="color: rgb(75, 209, 250);">(</span><span style="color: rgb(255, 255, 0);">(</span><span style="color: rgb(75, 209, 250);">i</span>*<span style="color: rgb(75, 209, 250);">size</span><span style="color: rgb(255, 255, 0);">)</span>, <span style="color: rgb(255, 255, 0);">(</span><span style="color: rgb(75, 209, 250);">i</span>*<span style="color: rgb(75, 209, 250);">size</span><span style="color: rgb(255, 255, 0);">)</span> + <span style="color: rgb(75, 209, 250);">size</span><span style="color: rgb(75, 209, 250);">)</span>;
                <span style="color: rgb(250, 44, 222)">}</span>
            <span style="color: rgb(250, 44, 222)">return</span> <span style="color: rgb(75, 209, 250);">newArr</span>.<span style="color:rgb(243, 248, 169)">reverse</span><span style="color: rgb(250, 44, 222)">()</span>.<span style="color:rgb(243, 248, 169)">concat</span>.<span style="color:rgb(243, 248, 169)">apply</span><span style="color: rgb(250, 44, 222)">(</span><span style="color: rgb(75, 209, 250);">[]</span>, <span style="color: rgb(75, 209, 250);">newArr</span><span style="color: rgb(250, 44, 222)">)</span>;
@@ -128,6 +128,7 @@
     <a class="codewars" href="https://www.codewars.com/users/Lusinesayshelloworld" target="_blank">
       <img src="./img/codewars.svg" alt="codewars_logo">
     </a>
+  </div>
 </footer>
 </body>
 </html>
